fix(python): Fix package installation and improve CLI
- Fix setuptools configuration in pyproject.toml
  - Changed from incorrect packages.find with where=['sgaip'] to explicit packages=['sgaip']
- Bump version from 0.1.1 to 0.1.2
- Improve keygen output formatting to match npm reference implementation
- Add input validation for sign/verify commands (--message OR --file required)
- Better error messages with f-string formatting for consistency

--- a/reference/python/pyproject.toml
+++ b/reference/python/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sgaip"
-version = "0.1.1"
+version = "0.1.2"
 description = "Stateless Global Agent Identity Protocol (SGAIP) reference implementation"
 readme = "README.md"
 license = { text = "Apache-2.0" }
@@ -43,8 +43,8 @@ dev = [
 	"mypy>=1.7",
 ]
 
-[tool.setuptools.packages.find]
-where = ["sgaip"]
+[tool.setuptools]
+packages = ["sgaip"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
